--- a/logistic.ipynb
+++ b/logistic.ipynb
@@ -62,7 +62,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lrl1 = LR(penalty = 'l1',C=0.5,solver='liblinear',max_iter=1000)"
+    "lrl1 = LR(penalty = 'l1',C=0.5,solver='liblinear',max_iter=1000)\n",
+    "lrl1"
    ]
   },
   {
